--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=ozodbekpanjiyev0444@gmail.com
 SMTP_PASSWORD=dnkd gakv wxik oeka
-BASE_URL=http://localhost:4200
+BASE_URL=https://mytodo-fronend-production.up.railway.app
