nodeMailer bug fix

--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ REFRESH_TOKEN_KEY=$myRefreshToken$
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
 SMTP_USER=ozodbekpanjiyev0444@gmail.com
-SMTP_PASSWORD=dnkd gakv wxik oeka
+SMTP_PASSWORD=dnkdgakvwxikoeka
 BASE_URL=https://mytodo-fronend-production.up.railway.app
