--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT_DEV=8000
 PORT_PROD=9000
 DB_URL_DEV=mongodb+srv://root:VaKiB90BdnFPl8oS@cluster0.vm8e5vg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-DB_URL_PROD=mongodb+srv://root:VaKiB90BdnFPl8oS@cluster0.vm8e5vg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_URL_EXPENSES=mongodb+srv://root:VaKiB90BdnFPl8oS@cluster0.vm8e5vg.mongodb.net/expenses?retryWrites=true&w=majority&appName=Cluster0
 ACCESS_TOKEN_KEY=$myAccessToken$
 REFRESH_TOKEN_KEY=$myRefreshToken$
 SMTP_HOST=smtp.gmail.com
